* adding Windows scripts (Thanks @jvernee) * adding OpenGL sample (Thanks @mcimadamore)